Adding fonts and components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "#/*": ["./*"],
-      "@svg/*": ["./public/svg/*"]
+      "@svg/*": ["./src/shared/assets/svg/*"]
     }
   },
   "include": [
