--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "dependencies": {
     "clsx": "^2.0.0",
-    "next": "^14.0.4-canary.11",
+    "next": "14.0.4-canary.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "server-only": "^0.0.1",
