--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "start_template",
+  "name": "shopco",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,7 +16,7 @@
   "dependencies": {
     "clsx": "^2.0.0",
     "ky": "^1.1.3",
-    "next": "14.0.5-canary.2",
+    "next": "14.0.5-canary.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "server-only": "^0.0.1",
