--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "8.0.0-rc17",
     "ky": "^1.1.3",
+    "lucide-react": "^0.303.0",
     "next": "14.0.5-canary.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
     "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
