--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-autoplay": "8.0.0-rc17",
     "embla-carousel-react": "8.0.0-rc17",
     "ky": "^1.1.3",
     "lucide-react": "^0.303.0",
