add: databases and 6 tables

--- a/components.json
+++ b/components.json
@@ -11,7 +11,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/shared/shadcn",
+    "components": "@/shared/ui/shadcn",
     "utils": "@/shared/lib/utils/cn"
   }
 }
