--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,18 @@
 {
   "ignorePatterns": ["*.config.js"],
-  "extends": ["next/core-web-vitals", "prettier"],
+  "settings": {},
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:drizzle/recommended",
+    "plugin:tailwindcss/recommended",
+    "plugin:promise/recommended",
+    "prettier"
+  ],
+  "env": {
+    "node": true,
+    "browser": true,
+    "es2020": true
+  },
+  "plugins": ["drizzle", "promise"],
   "rules": {}
 }
