--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "drizzle-kit generate:pg",
+    "push": "drizzle-kit push:pg",
+    "genAndPush": "drizzle-kit generate:pg && drizzle-kit push:pg",
+    "studio": "drizzle-kit studio --host 127.0.0.1"
   },
   "browserslist": [
     ">0.5%",
@@ -14,16 +18,22 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "drizzle-orm": "^0.29.3",
+    "drizzle-zod": "^0.5.1",
     "embla-carousel-autoplay": "8.0.0-rc17",
     "embla-carousel-react": "8.0.0-rc17",
     "ky": "^1.2.0",
     "lucide-react": "^0.303.0",
+    "nanoid": "^5.0.4",
     "next": "14.1.1-canary.10",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-focus-lock": "^2.9.7",
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
     "tailwind-merge": "^2.2.1",
@@ -33,13 +43,20 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.11.6",
+    "@types/pg": "^8.11.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
     "autoprefixer": "^10.4.17",
     "cssnano": "^6.0.3",
+    "drizzle-kit": "^0.20.13",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-drizzle": "^0.2.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-tailwindcss": "^3.14.1",
     "postcss": "^8.4.33",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^9.3.0",
