--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -16,22 +16,24 @@
     // "declaration": true,
     "plugins": [
       {
-        "name": "next"
-      }
+        "name": "next",
+      },
     ],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
       "#/*": ["./*"],
-      "@svg/*": ["./src/shared/assets/svg/*"]
-    }
+      "@db": ["src/db"],
+      "@svg/*": ["./src/shared/assets/svg/*"],
+    },
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "*.d.ts"
+    "*.d.ts",
   ],
   "exclude": ["node_modules"],
-  "files": ["svg.d.ts"]
+  "files": ["svg.d.ts"],
 }
