--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "drizzle-kit generate:pg",
-    "push": "drizzle-kit push:pg",
-    "genAndPush": "drizzle-kit generate:pg && drizzle-kit push:pg",
+    "migration:generate": "drizzle-kit generate:pg",
+    "migration:push": "drizzle-kit push:pg",
     "studio": "drizzle-kit studio --host 127.0.0.1"
   },
   "browserslist": [
@@ -28,8 +27,8 @@
     "embla-carousel-react": "8.0.0-rc17",
     "ky": "^1.2.0",
     "lucide-react": "^0.303.0",
-    "nanoid": "^5.0.4",
-    "next": "14.1.1-canary.10",
+    "nanoid": "^5.0.5",
+    "next": "14.1.1-canary.36",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,25 +41,25 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-    "@types/node": "^20.11.6",
+    "@types/node": "^20.11.16",
     "@types/pg": "^8.11.0",
-    "@types/react": "^18.2.48",
+    "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.17",
     "cssnano": "^6.0.3",
-    "drizzle-kit": "^0.20.13",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-tailwindcss": "^3.14.1",
-    "postcss": "^8.4.33",
+    "eslint-plugin-tailwindcss": "^3.14.2",
+    "postcss": "^8.4.34",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^9.3.0",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
     "tailwindcss-debug-screens": "^2.2.1",
