--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "migration:generate": "drizzle-kit generate:pg",
     "migration:push": "drizzle-kit push:pg",
     "studio": "drizzle-kit studio --host 127.0.0.1",
-    "build:icons": "npx tsx ./build-icons.mts"
+    "build:icons": "npx tsx ./build-icons.mts",
+    "sly": "pnpm dlx @sly-cli/sly add"
   },
   "browserslist": [
     ">0.5%",
@@ -42,7 +43,6 @@
   },
   "devDependencies": {
     "@sly-cli/sly": "^1.8.0",
-    "@svgr/webpack": "^8.1.0",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.16",
     "@types/pg": "^8.11.0",
@@ -67,6 +67,7 @@
     "postcss-preset-env": "^9.3.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "svgo": "^3.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-debug-screens": "^2.2.1",
     "typescript": "^5.3.3"
