--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@auth/drizzle-adapter": "^0.7.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "argon2": "^0.31.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
@@ -30,7 +32,8 @@
     "ky": "^1.2.0",
     "lucide-react": "^0.303.0",
     "nanoid": "^5.0.5",
-    "next": "14.1.1-canary.51",
+    "next": "14.1.1-canary.61",
+    "next-auth": "5.0.0-beta.9",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
