--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "embla-carousel-autoplay": "8.0.0-rc17",
     "embla-carousel-react": "8.0.0-rc17",
     "ky": "^1.2.0",
-    "lucide-react": "^0.303.0",
     "nanoid": "^5.0.5",
     "next": "14.1.1-canary.61",
     "next-auth": "5.0.0-beta.9",
@@ -45,6 +44,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@conarti/eslint-plugin-feature-sliced": "^1.0.5",
     "@sly-cli/sly": "^1.8.0",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.16",
@@ -60,10 +60,12 @@
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-drizzle": "^0.2.3",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-tailwindcss": "^3.14.2",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.10",
+    "lucide-react": "^0.303.0",
     "node-html-parser": "^6.1.12",
     "postcss": "^8.4.34",
     "postcss-flexbugs-fixes": "^5.0.2",
