--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "@auth/drizzle-adapter": "^0.7.0",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "argon2": "^0.40.1",
@@ -33,12 +34,15 @@
     "nanoid": "^5.0.5",
     "next": "14.1.1-canary.61",
     "next-auth": "5.0.0-beta.9",
+    "next-themes": "^0.2.1",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.7",
+    "react-hook-form": "^7.50.1",
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
+    "sonner": "^1.4.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
