add: env verification and validation, type: "module"

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shopco",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -23,6 +24,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@t3-oss/env-nextjs": "^0.9.2",
     "argon2": "^0.40.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -32,7 +34,7 @@
     "embla-carousel-react": "8.0.0-rc17",
     "ky": "^1.2.2",
     "nanoid": "^5.0.6",
-    "next": "14.1.1-canary.82",
+    "next": "14.2.0-canary.18",
     "next-auth": "5.0.0-beta.15",
     "next-themes": "^0.2.1",
     "pg": "^8.11.3",
@@ -69,6 +71,7 @@
     "eslint-plugin-tailwindcss": "^3.14.3",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.10",
+    "jiti": "^1.21.0",
     "lucide-react": "^0.303.0",
     "node-html-parser": "^6.1.12",
     "postcss": "^8.4.35",
