--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@auth/drizzle-adapter": "^0.7.0",
+    "@auth/drizzle-adapter": "^0.8.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
@@ -28,22 +28,22 @@
     "argon2": "^0.40.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "drizzle-orm": "^0.29.4",
+    "drizzle-orm": "^0.30.2",
     "drizzle-zod": "^0.5.1",
     "embla-carousel-autoplay": "8.0.0-rc17",
     "embla-carousel-react": "8.0.0-rc17",
     "ky": "^1.2.2",
     "nanoid": "^5.0.6",
-    "next": "14.1.2-canary.3",
+    "next": "14.1.3",
     "next-auth": "5.0.0-beta.15",
-    "next-themes": "^0.2.1",
+    "next-themes": "^0.3.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.11.2",
     "react-hook-form": "^7.51.0",
     "server-only": "^0.0.1",
-    "sharp": "^0.32.6",
+    "sharp": "^0.33.2",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -54,17 +54,17 @@
     "@conarti/eslint-plugin-feature-sliced": "^1.0.5",
     "@sly-cli/sly": "^1.10.0",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^20.11.24",
+    "@types/node": "^20.11.28",
     "@types/pg": "^8.11.2",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.18",
-    "cssnano": "^6.0.5",
+    "cssnano": "^6.1.0",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "14.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-import": "^2.29.1",
@@ -79,10 +79,10 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^9.4.0",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "svgo": "^3.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-debug-screens": "^2.2.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.2"
   }
 }
