--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "*.d.ts",
-    "postcss.config.js"
+    "postcss.config.cjs"
   ],
   "exclude": ["node_modules"]
 }
