--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "postcss-preset-env": "^9.4.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
+    "react-devtools": "^5.0.2",
     "svgo": "^3.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-debug-screens": "^2.2.1",
