--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,58 @@
 {
-  "ignorePatterns": ["*.config.js"],
-  "settings": {},
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:drizzle/recommended",
-    "plugin:tailwindcss/recommended",
-    "plugin:promise/recommended",
-    "plugin:@conarti/feature-sliced/recommended",
-    "prettier"
-  ],
-  "env": {
-    "node": true,
-    "browser": true,
-    "es2020": true
-  },
-  "plugins": ["drizzle", "promise"],
-  "rules": {
-    "tailwindcss/no-custom-classname": 0,
-    "import/order": 0
-  }
+  "extends": ["prettier"],
+  "overrides": [
+    {
+      "files": ["**/*.{js,mjs,ts,tsx,mdx}"],
+      "env": { "es6": true, "node": true, "browser": true },
+      "plugins": ["drizzle", "promise", "import"],
+      "extends": [
+        "eslint:recommended",
+        "plugin:drizzle/recommended",
+        "plugin:tailwindcss/recommended",
+        "plugin:promise/recommended",
+        "plugin:@conarti/feature-sliced/recommended",
+        "next",
+        "next/core-web-vitals"
+      ],
+      "rules": {
+        "tailwindcss/no-custom-classname": 0,
+        "import/order": [
+          "error",
+          {
+            "groups": [
+              "builtin",
+              "external",
+              "internal",
+              ["sibling", "parent"],
+              "index",
+              "unknown"
+            ],
+            "newlines-between": "always",
+            "alphabetize": {
+              "order": "asc",
+              "caseInsensitive": true
+            }
+          }
+        ]
+      }
+    },
+    {
+      "files": ["**/*.ts?(x)"],
+      "plugins": ["@typescript-eslint", "no-relative-import-paths"],
+      "extends": [
+        "plugin:@typescript-eslint/recommended",
+        "plugin:import/recommended",
+        "plugin:import/typescript"
+      ],
+      "parser": "@typescript-eslint/parser",
+      "rules": {
+        "@typescript-eslint/consistent-type-imports": "error",
+        "@typescript-eslint/array-type": ["error", { "default": "generic" }],
+        "no-relative-import-paths/no-relative-import-paths": [
+          "warn",
+          { "allowSameFolder": true, "prefix": "@" }
+        ]
+      }
+    }
+  ]
 }
