--- a/.prettierrc
+++ b/.prettierrc
@@ -4,8 +4,10 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
+  "jsxSingleQuote": false,
   "endOfLine": "lf",
   "printWidth": 80,
-  "bracketSameLine": true,
+  "bracketSpacing": true,
+  "bracketSameLine": false,
   "plugins": ["prettier-plugin-tailwindcss"]
 }
