--- a/package.json
+++ b/package.json
@@ -12,13 +12,9 @@
     "migration:push": "drizzle-kit push:pg",
     "studio": "drizzle-kit studio --host 127.0.0.1",
     "build:icons": "npx tsx ./build-icons.mts",
-    "sly": "pnpm dlx @sly-cli/sly add"
+    "sly": "pnpm dlx @sly-cli/sly add",
+    "prepare": "husky"
   },
-  "browserslist": [
-    ">0.5%",
-    "not dead",
-    "not op_mini all"
-  ],
   "dependencies": {
     "@auth/drizzle-adapter": "^0.8.0",
     "@hookform/resolvers": "^3.3.4",
@@ -68,10 +64,12 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-no-relative-import-paths": "^1.5.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-tailwindcss": "^3.14.3",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.10",
+    "husky": "^9.0.11",
     "jiti": "^1.21.0",
     "lucide-react": "^0.303.0",
     "node-html-parser": "^6.1.12",
@@ -81,6 +79,10 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "react-devtools": "^5.0.2",
+    "stylelint": "^16.3.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-selector-bem-pattern": "^4.0.0",
     "svgo": "^3.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-debug-screens": "^2.2.1",
