--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,7 @@
     },
     {
       "files": ["**/*.ts?(x)"],
-      "plugins": ["@typescript-eslint", "no-relative-import-paths"],
+      "plugins": ["@typescript-eslint"],
       "extends": [
         "plugin:@typescript-eslint/recommended",
         "plugin:import/recommended",
@@ -47,11 +47,15 @@
       "parser": "@typescript-eslint/parser",
       "rules": {
         "@typescript-eslint/consistent-type-imports": "error",
-        "@typescript-eslint/array-type": ["error", { "default": "generic" }],
-        "no-relative-import-paths/no-relative-import-paths": [
-          "warn",
-          { "allowSameFolder": true, "prefix": "@" }
-        ]
+        "@typescript-eslint/array-type": [
+          "error",
+          { "default": "array-simple" }
+        ],
+        // "no-relative-import-paths/no-relative-import-paths": [
+        //   "warn",
+        //   { "allowSameFolder": true, "prefix": "@" }
+        // ],
+        "@typescript-eslint/no-explicit-any": 0
       }
     }
   ]
